		When changing the number of newfiles groups, the newfiles
		reports database is converted on the fly.
		All path variables now have a length of PATH_MAX.
		When mbsetup is started, all databases not present are created
		and when needed filled with default records.
		There is now one possible commandline parameter: init. This
		should be used only once (but doesn't hurt if run more then
		once) on a new installation.
		A check is build in that mbsetup is started by user mbse.

	mbcico:
		Renamed sendfile function in zmsend.c to sendzfile to prevent a
		conflict with an excisting library call on FreeBSD.
		Removed some debug logmessages.
		The filerquest response message doesn't use the tmpnam function
		anymore, this was the last one of the unsafe tmpnam calls.

	mball:
		Removed some compiler warnings on some systems.

	mbsebbs:
		Removed some compiler warnings on some systems.
		Added menu Display lines.
		Added menu item 21, display text only.
		When a user has no download files limit and no download Kbytes
		limit he may download unlimited.
		When a user has no timelimit set in the limits, he will get
		a 24 hours session limit.
		The written door.sys file now has EOF character at the end.
		The written door.sys file now has a : after the comport.
		Executing doors in nosuid mode (as real user) is now possible.
		This can be switched on using mbsetup. Info will be in FAQ.
		Fixed security problem in Unix username and password entry.
		Now stoped nicely if started without controling tty.
		Many bugs fixed in the full screen editor.
		Last line of message is no longer deleted when saving message.
		Segfault problem with deleting characters fixed.

	mbuseradd:
		Ported to work on FreeBSD.

	mbpasswd:
		Ported to work on FreeBSD.

	mbfile:
		All path string variables are now of length PATH_MAX.
		Added list file areas.

	fbutil:
		Removed list file areas.

	htmldoc:
		Upgraded the FTSC documents to the current state.

